--- a/package.json
+++ b/package.json
@@ -11,13 +11,21 @@
   "dependencies": {
     "next": "11.0.1",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "styled-components": "^5.3.0"
   },
   "devDependencies": {
     "@types/node": "^15.12.5",
     "@types/react": "^17.0.11",
-    "eslint": "7.29.0",
+    "babel-eslint": "^10.1.0",
+    "eslint": "^7.29.0",
+    "eslint-config-airbnb": "^18.2.1",
     "eslint-config-next": "11.0.1",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-import": "^2.23.4",
+    "eslint-plugin-react": "^7.24.0",
+    "prettier": "^2.3.2",
+    "pretty-quick": "^3.1.1",
     "typescript": "^4.3.4"
   }
 }
