--- a/package.json
+++ b/package.json
@@ -11,13 +11,13 @@
   "dependencies": {
     "next": "11.0.1",
     "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "styled-components": "^5.3.0"
+    "react-dom": "17.0.2"
   },
   "devDependencies": {
     "@types/node": "^15.12.5",
     "@types/react": "^17.0.11",
     "babel-eslint": "^10.1.0",
+    "css-loader": "^5.2.6",
     "eslint": "^7.29.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-config-next": "11.0.1",
@@ -26,6 +26,9 @@
     "eslint-plugin-react": "^7.24.0",
     "prettier": "^2.3.2",
     "pretty-quick": "^3.1.1",
-    "typescript": "^4.3.4"
+    "sass": "^1.35.1",
+    "sass-loader": "^12.1.0",
+    "typescript": "^4.3.4",
+    "webpack": "^5.40.0"
   }
 }
